--- a/styles/content.scss
+++ b/styles/content.scss
@@ -90,6 +90,7 @@
               }
 
               input[type=submit] {
+                cursor: pointer;
                 height: 40px;
                 width: 215px;
                 display: block;
